feat(SCRUM-17): manage events and registrations
